--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "es2021",
     "module": "es2020",
-    "lib": ["es2020"],
+    "lib": ["es2021"],
     "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": ".",
@@ -12,7 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "allowUnreachableCode": false,
-    "allowUnusedLabels": false
+    "allowUnusedLabels": false,
   },
   "include": ["src/**/*", "rollup.config.mjs"]
 }
